# c8ke

./: .gitignore  CMakeLists.txt  CMakePresets.json  RCa33108  README.md  c8ke.rc  vcpkg.json
include/: c8ke.h  c8ke.hpp  consts.hpp  globals.hpp  gui.h  gui.hpp
src/: RobotoMono-Regular.cpp  c8ke.cpp  gui.cpp  main.cpp  tinyfiledialogs.cpp
